# IBM-Senior-Design

./: README.md  debug.py  main.py  package-lock.json  run_web.bat  run_web.sh
backend/: analyzer.py  chat_cli.py  config.py  data_conversion.py  data_generator.py  ollama_input.py  ollama_input_2.py  pipeline.py  user_input.py
data/processed-data/: queueing_network_20260505_214406_data.csv  queueing_network_20260505_220256_data.csv  queueing_network_20260505_220720_data.csv  queueing_network_20260505_220853_data.csv  queueing_network_20260505_220928_data.csv  queueing_network_20260505_221459_data.csv  queueing_network_20260505_221543_data.csv  queueing_network_20260505_221609_data.csv  queueing_network_20260505_222527_data.csv
data/queueing-network/: queueing_network_20260505_214406.json  queueing_network_20260505_220256.json  queueing_network_20260505_220720.json  queueing_network_20260505_220853.json  queueing_network_20260505_220928.json  queueing_network_20260505_221459.json  queueing_network_20260505_221543.json  queueing_network_20260505_221609.json  queueing_network_20260505_222527.json
data/results/: 2026-05-05-21-45-08.json  2026-05-05-22-04-01.json  2026-05-05-22-07-21.json  2026-05-05-22-08-53.json  (+5 more)
debug/: debug.py
model/: NLIP-follow-up.Modelfile  NLIP-sys-desc.Modelfile  NLIP.Modelfile
nlip/nlip_web/: pyproject.toml
nlip/nlip_web/nlip_web/: genai.py  package-lock.json  stress_test_chat.py  text_chat.py
nlip/nlip_web/static/: nlip.js  stress_test.html  stress_test_script.js
program_files/: analyzer.py  chat_cli.py  chat_cli_2.py  config.py  data_conversion.py  data_generator.py  debug.py  ollama_input.py  pipeline.py  test_validation.py  validation.py
(+14 files in other folders)
