[tool.poetry]
name = "nlip-web"
version = "0.1.0"
description = ""
authors = ["Dinesh Verma <dverma@us.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
nlip-server = {path = "../nlip_server", develop = true}
ollama = "^0.6.2"
jsonschema = "^4.26.0"
numpy = "1.26.4"
pandas = "2.2.3"
matplotlib = "^3.10.9"
scipy = ">=1.16.1"
pydantic = ">=2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chat = "scripts:start_chat"
image = "scripts:start_image"

